--- a/VectorExRick/VectorEx.Lib/VectorEx.Lib.csproj
+++ b/VectorExRick/VectorEx.Lib/VectorEx.Lib.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Vector.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VectorException.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
